# examples.ipynb

./: .gitignore  README.md  llama2-7b-chat-hf.ipynb  lmsys-FastChat.md
FrogML/: README.md
FrogML/1.Intro/: README.md  churn_prediction.ipynb  pyproject.toml  xgb_churn.json
FrogML/1.Intro/solution/: Dockerfile  README.md  api.sh  requirements.txt
FrogML/1.Intro/solution/src/: PredictApi.py  __init__.py
FrogML/1.Intro/solution/tests/: PredictApiTests.py
FrogML/2.ModelPipeline/: README.md
Mini-Projects/: DataStructures.ipynb
Mini-Projects/Predict/: Bitcoin Close Prices.ipynb
Mini-Projects/Replace_Background_Image/: Index.ipynb
Mini-Projects/SentimentAnalysis/: VaderLexicon.ipynb
PyTorch/: Excerise_0.ipynb  Exercise_1.ipynb  Exercise_3.ipynb  Exercise_4.ipynb
SupervisedLearning/: LinearRegression.ipynb  README.md  requirements.txt
SupervisedLearning/scripts/: ScikitLinearRegression.py  __init__.py
SupervisedLearning/scripts/common/: MinimumVersion.py  StockData.py
TFdeveloperCertificate/: 0-softwareversions.ipynb  0-softwareversions.py  1-TensorflowRank.ipynb  1-TensorflowRank.py  2-Datasets.ipynb  2-Datasets.py  2-Excerise-CIFAR10.ipynb  2-Excerise-IRIS.ipynb  2-Excerise-MINST.ipynb  2-Excerise-MNIST.ipynb  README.MD  main.py  project.sh  requirements.txt  setup.py
TFdeveloperCertificate/data/: national_timeseries.json
TFdeveloperCertificate/scripts/: __init__.py
TFdeveloperCertificate/scripts/algorithms/: AbstractCode.py  (+9 more)
TFdeveloperCertificate/tests/: __init__.py
docs/: .$MLSecOps.drawio.bkp  MLSecOps.drawio
week-50/: README.md
(+5 files in other folders)
