# ref: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
[tool.poetry]
name = "churn-notebook"
version = "0.1.0"
description = ""
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.3"
pandas = "^2.2.3"
xgboost = "^2.1.2"
matplotlib = "^3.9.2"
ipython = "^8.29.0"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"